--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flag-icon-css",
+  "name": "@taxify/flag-icon-css",
   "version": "3.3.0",
   "author": "Panayiotis Lipiridis <lipiridis@gmail.com>",
   "licenses": [
