--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@taxify/flag-icon-css",
+  "name": "@bolteu/flag-icon-css",
   "version": "3.4.0",
   "author": "Panayiotis Lipiridis <lipiridis@gmail.com>",
   "licenses": [
@@ -42,5 +42,8 @@
     "fix": "yarn prettier --write",
     "prettier": "prettier \"**/*.{json,md,scss,less,yaml,yml}\"",
     "test": "yarn prettier --list-different"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
