--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "http://github.com/lipis/flag-icon-css"
+    "url": "http://github.com/bolteu/flag-icon-css"
   },
   "devDependencies": {
     "grunt": "1.0.4",
